package com.scraper.producer.pattern.structural.decorator;

import com.scraper.producer.pattern.creational.factory.Scraper;

import java.util.List;

/**
 * Decorator Pattern - Component interface
 */
public interface ScraperDecorator extends Scraper {
    // Additional methods can be added here
}

